--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 
 
 
+
 # IDE Files
 
 #-------------------------
@@ -52,4 +53,10 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.sublime-workspace
 
 *.sublime-project
+
+##Carpeta de archivos
+
+
+/archivos/
+
 
